force-app/main/default/objects/Engage_Service_Indicator_Alerts__mdt.object
<CustomObject>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon_Variant__c</fullName>
        <label>Icon Variant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <description>Can be a standard salesforce icon or up to 5 characters.</description>
        <label>Icon</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObject_Name__c</fullName>
        <label>SObject Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Background_Color__c</fullName>
        <label>Text Background Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tooltip__c</fullName>
        <complianceGroup>GDPR</complianceGroup>
        <description>Field to capture the tooltip as a helptext</description>
        <label>Tooltip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Icon</fullName>
                    <default>true</default>
                    <label>Icon</label>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>ContentAsset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Engage Service Indicator Alert</label>
    <pluralLabel>Engage Service Indicator Alerts</pluralLabel>
</CustomObject>